--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </p>
         </div>
 
-        <form id="contactForm">
+        <form id="contactForm" action="https://formspree.io/f/xldbkgjl" method="POST">
             <input type="text" name="name" placeholder="Seu nome" required>
             <input type="email" name="email" placeholder="Seu e-mail" required>
             <textarea name="message" placeholder="Sua mensagem" required></textarea>
